theme scss (org-mode,markdown): fixes for too much top margins on h1 titles

--- a/semantic-enjin/src/scss/markdown.scss
+++ b/semantic-enjin/src/scss/markdown.scss
@@ -18,6 +18,9 @@ body[data-page-format="md"] > main {
     margin-top: calc(var(--main--block--content--margin-top) * 2);
     margin-bottom: var(--main--block--content--margin-bottom);
   }
+  h1 {
+    margin-top: 0;
+  }
 
   p {
     margin-top: var(--main--block--margins);
